# dvbstreamer

./: .gitignore  CONTRIBUTORS.md  DVB-T2-ROADMAP.md  Makefile.am  PULL_REQUEST_PROPOSAL.md  README  README.md  TODO  config.h.in  configure  configure.in
doc/: command-reference.md  dvb-t2-validation-test-plan.md  dvbv5-scan-howto.md  history.md
include/: Makefile.am  userconfig.h
misc/: build-in-tmp.sh
src/: Makefile.am  dvbadapter.c  dvbctrl.c  main.c  parsezap.c  remoteintf.c  setup.c  userconfig.c
src/commands/: cmd_scanning.c
src/plugins/: cam.c
